search input font-size: 16px on smaller screens to prevent iOS zoom on focus

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -144,7 +144,6 @@
         border-radius: 23px;
         background-color: #fff;
         border: none;
-        font-size: 13px;
         height: 40px;
         width: 133px;
         color: #57687d;
@@ -348,6 +347,7 @@
 
       &__wrapper {
         input {
+          font-size: 16px;
           width: 0px;
           padding-right: 0px;
           box-shadow: none;
